--- a/backend/package.json
+++ b/backend/package.json
@@ -38,7 +38,8 @@
     "per-env": "^1.0.2",
     "pg": "^8.7.1",
     "sequelize": "^5.22.5",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "start": "^5.1.0"
   },
   "devDependencies": {
     "dotenv-cli": "^4.1.1",
