--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
     "migration:generate": "sequelize-cli migration:generate",
     "model:generate": "sequelize-cli model:generate",
     "seed:generate": "sequelize-cli seed:generate",
+    "sequelize": "sequelize",
+    "sequelize-cli": "sequelize-cli",
     "start": "per-env",
     "start:development": "dotenv nodemon ./bin/www",
     "start:production": "dotenv ./bin/www"
