--- a/backend/package.json
+++ b/backend/package.json
@@ -18,8 +18,8 @@
     "sequelize": "sequelize",
     "sequelize-cli": "sequelize-cli",
     "start": "per-env",
-    "start:development": "dotenv nodemon ./bin/www",
-    "start:production": "dotenv ./bin/www"
+    "start:development": "nodemon -r dotenv/config ./bin/www",
+    "start:production": "node ./bin/www"
   },
   "keywords": [],
   "author": "",
@@ -33,7 +33,6 @@
     "express": "^4.17.2",
     "express-async-handler": "^1.2.0",
     "express-validator": "^6.14.0",
-    "faker": "^5.5.3",
     "helmet": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
