--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
 		"@testing-library/user-event": "^12.8.3",
 		"js-cookie": "^3.0.1",
 		"react": "^17.0.2",
+		"react-date-picker": "^8.4.0",
 		"react-dom": "^17.0.2",
 		"react-outside-click-handler": "^1.3.0",
 		"react-redux": "^7.2.6",
