--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,14 @@
 		"@testing-library/jest-dom": "^5.16.1",
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/user-event": "^12.8.3",
+		"@wojtekmaj/react-daterange-picker": "^3.4.0",
+		"date-fns": "^2.28.0",
 		"js-cookie": "^3.0.1",
+		"mui-daterange-picker": "^1.0.5",
 		"react": "^17.0.2",
+		"react-collapse": "^5.1.1",
 		"react-date-picker": "^8.4.0",
+		"react-date-range": "^1.4.0",
 		"react-dom": "^17.0.2",
 		"react-outside-click-handler": "^1.3.0",
 		"react-redux": "^7.2.6",
